// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert Component matches danger 1`] = `
.c0 {
  position: relative;
  padding: 0.75rem 1.25rem;
  border: 1px solid transparent;
  border-radius: 0.25rem;
  color: #721c24;
  background-color: #f8d7da;
  border-color: #f5b4bb;
}

.c0 > a {
  font-weight: 700;
}

.c0 > h1,
.c0 > h2,
.c0 > h3,
.c0 > h4,
.c0 > h5,
.c0 > h6 {
  color: inherit;
}

.c0 > hr {
  border-top-color: #f5b4bb;
}

.c0 > a,
.c0 > a:hover {
  color: #721c24;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<div
  class="sc-fznyAO c0"
  role="alert"
/>
`;

exports[`Alert Component matches dark 1`] = `
.c0 {
  position: relative;
  padding: 0.75rem 1.25rem;
  border: 1px solid transparent;
  border-radius: 0.25rem;
  color: #171a1d;
  background-color: #d6d8d9;
  border-color: #abaeb1;
}

.c0 > a {
  font-weight: 700;
}

.c0 > h1,
.c0 > h2,
.c0 > h3,
.c0 > h4,
.c0 > h5,
.c0 > h6 {
  color: inherit;
}

.c0 > hr {
  border-top-color: #abaeb1;
}

.c0 > a,
.c0 > a:hover {
  color: #171a1d;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<div
  class="sc-fznyAO c0"
  role="alert"
/>
`;

exports[`Alert Component matches info 1`] = `
.c0 {
  position: relative;
  padding: 0.75rem 1.25rem;
  border: 1px solid transparent;
  border-radius: 0.25rem;
  color: #10707f;
  background-color: #d1ecf1;
  border-color: #a3d6de;
}

.c0 > a {
  font-weight: 700;
}

.c0 > h1,
.c0 > h2,
.c0 > h3,
.c0 > h4,
.c0 > h5,
.c0 > h6 {
  color: inherit;
}

.c0 > hr {
  border-top-color: #a3d6de;
}

.c0 > a,
.c0 > a:hover {
  color: #10707f;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<div
  class="sc-fznyAO c0"
  role="alert"
/>
`;

exports[`Alert Component matches light 1`] = `
.c0 {
  position: relative;
  padding: 0.75rem 1.25rem;
  border: 1px solid transparent;
  border-radius: 0.25rem;
  background-color: #fefefe;
  border-color: #cccecf;
}

.c0 > a {
  font-weight: 700;
}

.c0 > h1,
.c0 > h2,
.c0 > h3,
.c0 > h4,
.c0 > h5,
.c0 > h6 {
  color: inherit;
}

.c0 > hr {
  border-top-color: #fdfdfe;
}

.c0 > a,
.c0 > a:hover {
  color: #171a1d;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<div
  class="sc-fznyAO c0"
  role="alert"
/>
`;

exports[`Alert Component matches noRadius 1`] = `
.c0 {
  position: relative;
  padding: 0.75rem 1.25rem;
  border: 1px solid transparent;
  border-radius: 0;
  color: #383d41;
  background-color: #e2e3e5;
  border-color: #b4b5b7;
}

.c0 > a {
  font-weight: 700;
}

.c0 > h1,
.c0 > h2,
.c0 > h3,
.c0 > h4,
.c0 > h5,
.c0 > h6 {
  color: inherit;
}

.c0 > hr {
  border-top-color: #b4b5b7;
}

.c0 > a,
.c0 > a:hover {
  color: #383d41;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<div
  class="sc-fznyAO c0"
  role="alert"
/>
`;

exports[`Alert Component matches pill 1`] = `
.c0 {
  position: relative;
  padding: 0.75rem 1.25rem;
  border: 1px solid transparent;
  border-radius: 10rem;
  color: #383d41;
  background-color: #e2e3e5;
  border-color: #b4b5b7;
}

.c0 > a {
  font-weight: 700;
}

.c0 > h1,
.c0 > h2,
.c0 > h3,
.c0 > h4,
.c0 > h5,
.c0 > h6 {
  color: inherit;
}

.c0 > hr {
  border-top-color: #b4b5b7;
}

.c0 > a,
.c0 > a:hover {
  color: #383d41;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<div
  class="sc-fznyAO c0"
  role="alert"
/>
`;

exports[`Alert Component matches plain 1`] = `
.c0 {
  position: relative;
  padding: 0.75rem 1.25rem;
  border: 1px solid transparent;
  border-radius: 0.25rem;
  color: #383d41;
  background-color: #e2e3e5;
  border-color: #b4b5b7;
}

.c0 > a {
  font-weight: 700;
}

.c0 > h1,
.c0 > h2,
.c0 > h3,
.c0 > h4,
.c0 > h5,
.c0 > h6 {
  color: inherit;
}

.c0 > hr {
  border-top-color: #b4b5b7;
}

.c0 > a,
.c0 > a:hover {
  color: #383d41;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<div
  class="sc-fznyAO c0"
  role="alert"
>
  Hello World
</div>
`;

exports[`Alert Component matches primary 1`] = `
.c0 {
  position: relative;
  padding: 0.75rem 1.25rem;
  border: 1px solid transparent;
  border-radius: 0.25rem;
  color: #004085;
  background-color: #cce5ff;
  border-color: #9cc9fb;
}

.c0 > a {
  font-weight: 700;
}

.c0 > h1,
.c0 > h2,
.c0 > h3,
.c0 > h4,
.c0 > h5,
.c0 > h6 {
  color: inherit;
}

.c0 > hr {
  border-top-color: #9cc9fb;
}

.c0 > a,
.c0 > a:hover {
  color: #004085;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<div
  class="sc-fznyAO c0"
  role="alert"
/>
`;

exports[`Alert Component matches secondary 1`] = `
.c0 {
  position: relative;
  padding: 0.75rem 1.25rem;
  border: 1px solid transparent;
  border-radius: 0.25rem;
  color: #383d41;
  background-color: #e2e3e5;
  border-color: #b4b5b7;
}

.c0 > a {
  font-weight: 700;
}

.c0 > h1,
.c0 > h2,
.c0 > h3,
.c0 > h4,
.c0 > h5,
.c0 > h6 {
  color: inherit;
}

.c0 > hr {
  border-top-color: #b4b5b7;
}

.c0 > a,
.c0 > a:hover {
  color: #383d41;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<div
  class="sc-fznyAO c0"
  role="alert"
/>
`;

exports[`Alert Component matches success 1`] = `
.c0 {
  position: relative;
  padding: 0.75rem 1.25rem;
  border: 1px solid transparent;
  border-radius: 0.25rem;
  color: #155724;
  background-color: #d4edda;
  border-color: #72d889;
}

.c0 > a {
  font-weight: 700;
}

.c0 > h1,
.c0 > h2,
.c0 > h3,
.c0 > h4,
.c0 > h5,
.c0 > h6 {
  color: inherit;
}

.c0 > hr {
  border-top-color: #72d889;
}

.c0 > a,
.c0 > a:hover {
  color: #155724;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<div
  class="sc-fznyAO c0"
  role="alert"
/>
`;

exports[`Alert Component matches warning 1`] = `
.c0 {
  position: relative;
  padding: 0.75rem 1.25rem;
  border: 1px solid transparent;
  border-radius: 0.25rem;
  color: #856404;
  background-color: #fff3cd;
  border-color: #f3da8d;
}

.c0 > a {
  font-weight: 700;
}

.c0 > h1,
.c0 > h2,
.c0 > h3,
.c0 > h4,
.c0 > h5,
.c0 > h6 {
  color: inherit;
}

.c0 > hr {
  border-top-color: #f3da8d;
}

.c0 > a,
.c0 > a:hover {
  color: #856404;
}

@media (min-width:576px) {

}

@media (min-width:768px) {

}

@media (min-width:992px) {

}

@media (min-width:1200px) {

}

<div
  class="sc-fznyAO c0"
  role="alert"
/>
`;
